--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
+body {
+    background-color: grey;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.header {
+    display:flex;
+    justify-content: center;
+}
 #border {
     border: 100px ridge red; 
-    height: 700px;
-    width: 700px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink:0;
+    flex-grow:1;
 }
 
 #canvas {
+    background-color: antiquewhite;
     padding: 0px;
-    height: 700px;
-    width: 700px;
+    height: 900px;
+    width: 900px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -18,5 +33,9 @@
 }
 
 .pixel {
-    border: 1px solid black;
+    background-color: antiquewhite;
+}
+
+.draw{
+    background-color: black;
 }
