--- a/style.css
+++ b/style.css
@@ -4,28 +4,42 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .header {
     display:flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pixel-size{
+    width: 700px;
 }
 
 .inputs{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 10px;
 }
 
-button {
-    font-size: 16px;
-    height: 40px;
-    width: 350px;
+#select-color{
+    display: flex;
+}
+
+button{
+    border-radius: 10px;
+    border: 5px ridge red;
+    font-size: 20px;
+}
+
+button, #color-select {
+    height: 60px;
+    width: 200px;
     margin:5px auto;
 }
 
-#slide-value {
+#slide-value{
     margin: auto;
 }
 
@@ -33,10 +47,7 @@ button {
     border: 100px ridge red; 
     border-radius: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink:0;
-    flex-grow:1;
+    flex-direction: column;
 }
 
 #canvas {
@@ -52,8 +63,4 @@ button {
 
 .pixel {
     background-color: antiquewhite;
-}
-
-.draw{
-    background-color: black;
 }
